# crosspoint-reader-trustgeek

./: USER_GUIDE.md  platformio.ini
apps/samples/baby-flashcards/: main.lua  manifest.json
apps/samples/break-tips/: main.lua  manifest.json
apps/samples/breathing-break/: main.lua  manifest.json
apps/samples/checklist/: main.lua  manifest.json
apps/samples/countdown/: main.lua  manifest.json
apps/samples/daily-quote/: main.lua  manifest.json
apps/samples/dice/: main.lua  manifest.json
apps/samples/hello/: README.md  (+2 more)
lib/AppStore/: AppBootstrap.cpp  AppBootstrap.h  AppCatalogEntry.h  AppPathSanitizer.cpp  AppPathSanitizer.h  AppRegistry.cpp  AppRegistry.h  AppRegistryJson.cpp  AppRegistryJson.h  AppStoreManifest.cpp  AppStoreManifest.h  AppStoreManifestData.h  AppStoreManifestJson.cpp  AppStoreManifestJson.h  AppStoreManifestResolve.cpp  AppStoreManifestResolve.h  AppStoreManifestTypes.h  AppStorePaths.h  AppVersion.cpp  AppVersion.h  library.json
lib/LuaRuntime/: AppRunner.cpp  AppRunner.h  LuaAllocator.cpp  LuaAllocator.h  LuaAppDisplay.cpp  LuaAppDisplay.h  LuaEngine.cpp  LuaEngine.h  LuaHostApiContext.cpp  LuaHostApiContext.h  LuaHostApiDisplay.cpp  LuaHostApiDisplay.h  LuaHostApiFs.cpp  LuaHostApiFs.h  LuaHostApiInput.cpp  LuaHostApiInput.h  LuaHostApiSettings.cpp  LuaHostApiSettings.h  LuaHostApiSys.cpp  LuaHostApiSys.h  LuaHostApiSysContext.cpp  library.json
lib/ZipFile/: ZipFile.cpp  ZipFile.h
lib/hal/: HalClock.cpp  HalClock.h
scripts/: vendor_lua.sh
src/: SettingsList.h  main.cpp
src/activities/: ActivityManager.cpp  ActivityManager.h
src/components/: UITheme.cpp
test/: CMakeLists.txt
test/app_store/: AppRegistryJsonTest.cpp  AppStoreCoreTest.cpp  AppStoreManifestFallbackTest.cpp  AppStoreManifestJsonTest.cpp  CMakeLists.txt
(+29 files in other folders)
